--- a/src/org/oop/view/agenda/Agenda.form
+++ b/src/org/oop/view/agenda/Agenda.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.Agenda">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.agenda.Agenda">
   <grid id="27dc6" binding="agendapanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -81,6 +81,7 @@
                           <grid row="1" column="0" row-span="1" col-span="8" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
+                          <foreground color="-16777216"/>
                           <text value="Insegnamenti di Nomeciclo"/>
                         </properties>
                       </component>
@@ -155,7 +156,7 @@
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
-                          <foreground color="-4473925"/>
+                          <foreground color="-16777216"/>
                           <text value="Aggiungi o rimuovi un ciclo"/>
                         </properties>
                       </component>
