--- a/src/org/oop/view/agenda/AttivitaView.form
+++ b/src/org/oop/view/agenda/AttivitaView.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.AttivitaView">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.agenda.AttivitaView">
   <grid id="27dc6" binding="activitypanel" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="4" right="4"/>
     <constraints>
