--- a/src/org/oop/view/Tasse.form
+++ b/src/org/oop/view/Tasse.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.segreteria.Iscrizione">
-  <grid id="27dc6" binding="iscrizionepanel" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.Tasse">
+  <grid id="27dc6" binding="tassepanel" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -8,30 +8,34 @@
     <properties/>
     <border type="none"/>
     <children>
-      <hspacer id="d1d93">
+      <hspacer id="5166d">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="28" height="11"/>
+          </grid>
         </constraints>
       </hspacer>
-      <vspacer id="b8bda">
+      <vspacer id="8bd0f">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+            <preferred-size width="28" height="14"/>
+          </grid>
         </constraints>
       </vspacer>
-      <scrollpane id="ae361" binding="scrollpanetable">
+      <scrollpane id="a8a0b">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="54e0b" class="javax.swing.JTable" binding="tabellaiscrizione">
+          <component id="62220" class="javax.swing.JTable" binding="tabellatasse">
             <constraints/>
             <properties/>
           </component>
         </children>
       </scrollpane>
-      <component id="fc3a" class="javax.swing.JButton" binding="eliminarigabutton">
+      <component id="f447f" class="javax.swing.JButton" binding="eliminaButton" default-binding="true">
         <constraints>
           <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -39,7 +43,7 @@
           <text value="Elimina"/>
         </properties>
       </component>
-      <component id="1f61c" class="javax.swing.JButton" binding="aggiungirigabutton">
+      <component id="d26c3" class="javax.swing.JButton" binding="aggiungiButton" default-binding="true">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -47,7 +51,7 @@
           <text value="Aggiungi"/>
         </properties>
       </component>
-      <component id="5ebf1" class="javax.swing.JButton" binding="confermabutton">
+      <component id="70ed6" class="javax.swing.JButton" binding="confermaButton">
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
